* Now connections are closed in each test. You can override the DatabaseTestCase.closeConnection() to modify this behavior. * Added the IDatabaseConnection interface. Modified DatabaseConnection to implements that interface. Modified DatabaseTestCase.getConnection() to returns that interface. You need to modify your subclass accordingly. * Fixed bug 526235 - Cannot export tables (jdbc-odbc with MS-SQL 7).

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,8 @@ TO DO - dbunit
 ////////////////////////////////////////////////////////////////////////////////
 // Enhancements
 
+* Add javadocs!!!!! <ML-3/6/2 10:05AM>
+
 * Create Ant build file. <ML-2/22/2 10:05AM>
 
 * Add support for torque (TorqueDataSet/TorqueTable). <ML-2/22/2 10:06AM>
