--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ Documentation:
 
 * Add build instructions
 
+* << TESTING SVN COMMITS again (removed dbunit-commit@lists.sourceforge.net)  >>
 ---
 
 Features:
